<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRouteMapsActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/maplayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".6">
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight=".4"
        android:layout_gravity="center">

        <android.support.percent.PercentRelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/startLocationUpdates"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/start_location"
                android:onClick="startLocationClick"
                app:layout_heightPercent="25%"
                app:layout_widthPercent="33.333%" />

            <Button
                android:id="@+id/start_route_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/start_new_route"
                android:layout_toEndOf="@id/startLocationUpdates"
                android:onClick="startRouteClick"
                app:layout_heightPercent="25%"
                app:layout_widthPercent="33.333%"/>

            <Button
                android:id="@+id/stop_route_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_toEndOf="@id/start_route_button"
                android:text="@string/stop_new_route"
                android:onClick="stopRouteClick"
                app:layout_heightPercent="25%"
                app:layout_widthPercent="33.333%"/>


            <TextView
                android:id="@+id/time_field"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_below="@id/start_route_button"
                android:gravity="center"
                android:text="@string/time_new_route"
                android:textSize="27sp"
                app:layout_heightPercent="37.5%"
                app:layout_widthPercent="100%" />

            <TextView
                android:id="@+id/distance_field"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_below="@id/time_field"
                android:text="@string/distance_new_route"
                android:textSize="27sp"
                app:layout_heightPercent="37.5%"
                app:layout_widthPercent="100%" />

        </android.support.percent.PercentRelativeLayout>



    </LinearLayout>
</LinearLayout>
